[CHANGED] Fixed Description spacing

--- a/app/client/src/scss/layout/Events.scss
+++ b/app/client/src/scss/layout/Events.scss
@@ -158,6 +158,10 @@
                     font-size: 16px;
                 }
             }
+
+            .event_description{
+                grid-row: 3/4;
+            }
         }
     }
 
